[gd_scene load_steps=7 format=3 uid="uid://dyx4i5m8yp8cj"]

[ext_resource type="Script" path="res://Scripts/pause_menu.gd" id="1_426sa"]
[ext_resource type="PackedScene" uid="uid://c1pw2sgpv18vm" path="res://fonine_menu_music.tscn" id="2_unvt2"]
[ext_resource type="AudioStream" uid="uid://cd38cbclil7ka" path="res://Audio/SFX/select.wav" id="3_g1ko6"]

[sub_resource type="SystemFont" id="SystemFont_kaaon"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_fg4us"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_cq53c"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[node name="PauseMenu" type="Control"]
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = -45.0
offset_right = 355.0
offset_bottom = 807.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
script = ExtResource("1_426sa")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = -135.0
offset_top = -36.3333
offset_right = 133.0
offset_bottom = 65.6667

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_kaaon")
text = "Resume"

[node name="Restart" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_fg4us")
text = "Restart"

[node name="Sound" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_cq53c")
toggle_mode = true
text = "Mute Sound"

[node name="BackToMainMenu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_cq53c")
text = "Back to Main Menu"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_cq53c")
text = "Quit"

[node name="Select" parent="." instance=ExtResource("2_unvt2")]
stream = ExtResource("3_g1ko6")
volume_db = -36.667

[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Sound" to="." method="_on_sound_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackToMainMenu" to="." method="_on_back_to_main_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
